# Voicecord

./: main.py  pyproject.toml  requirement.txt  requirements.txt
