[tool.poetry]

name = "repl_python3_Voicecord"

version = "0.1.0"

description = ""

authors = ["Kanki <<>>"]

[tool.poetry.dependencies]

python = "^3.8"

discord = "^1.7.3"

Flask = "^2.0.3"

PyNaCl = "^1.5.0"

[tool.poetry.dev-dependencies]

[build-system]

requires = ["poetry-core>=1.0.0"]

build-backend = "poetry.core.masonry.api"

